Remaking homepage, caused layout bugs in other pages

--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,5 @@
 * {
+    font-family: 'Nunito', sans-serif;
     box-sizing: border-box;
     outline: none;
 }
@@ -10,12 +11,4 @@ html, body {
 body {
     background: black;
     color: white;
-}
-
-div#root {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
 }
